write the article
darcs-hash:20061117153745-2fc9d-35e21c8830fed527d2753a7076d2f695b0bab939.gz

--- a/article/InsightJournal.bib
+++ b/article/InsightJournal.bib
@@ -4805,4 +4805,21 @@ Discipline},
   Year           = 1986
 }
 
+@Article{Kitler1985,
+  Author         = "Kitler, J. and Illingworth, J. and Foglein, J.",
+  Title          = "Threshold selection based on a simple image statistic.",
+  Journal        = "Computer vision, graphics, and image processing",
+  Volume         = "30",
+  Pages          = "125-147",
+  Year           = 1985 
+}
+
+@Article{Wilkison98,
+  Author         = "M.H.F. Wilkinson",
+  Title          = "Optimizing edge detectors for robust automatic threshold selection: coping with edge curvature and noise.",
+  Journal        = "Graph. Models Image Proc.",
+  Volume         = "60",
+  Pages          = "385-401",
+  Year           = 1998
+}
 
