--- a/article/Article.tex
+++ b/article/Article.tex
@@ -33,16 +33,17 @@ colorlinks,linkcolor={blue},citecolor={blue},urlcolor={blue},
 
 % The title should be descriptive enough for people to be able to find
 % the relevant document. 
-\title{}
+\title{Robust Automatic Threshold Selection}
 
 % Increment the release number whenever significant changes are made.
 % The author and/or editor can define 'significant' however they like.
-\release{0.00}
+% \release{0.00}
 
 % At minimum, give your name and an email address.  You can include a
 % snail-mail address if you like.
-\author{}
-\authoraddress{}
+\author{Ga\"etan Lehmann}
+\authoraddress{INRA, UMR 1198; ENVA; CNRS, FRE 2857, Biologie du D\'eveloppement et
+Reproduction, Jouy en Josas, F-78350, France}
 
 \begin{document}
 \maketitle
@@ -54,12 +55,98 @@ colorlinks,linkcolor={blue},citecolor={blue},urlcolor={blue},
 
 \begin{abstract}
 \noindent
-% The abstract should be a paragraph or two long, and describe the
-% scope of the document.
+Robust Automatic Threshold Selection (RATS) \cite{Kitler1985} is a fast and noise robust
+automatic thresholding method based on gradients in the image. The basic idea is to choose
+the threshold at the intensity where the gradient are the highest.
 \end{abstract}
 
-\tableofcontents
+% \tableofcontents
 
+\section{Description}
+
+RATS is a method to automatically compute a threshold without using the histogram of
+the image. It compute a weighted average of the image intensity, using the gradient
+of the image, as shown in the following equation:
+
+$$
+T = \frac{\sum\limits_{p~in~D}G(p)~.~I(p)}{\sum\limits_{p~in~D}G(p)}
+$$
+
+where $I$ is the input image, and $G$ is the gradient of $I$. Several methods may
+be used to compute $G$. Both $I$ and $G$ are defined on the domain $D$.
+
+As detailed in \cite{Wilkison98}, using the same method with a pow of the gradient
+gives better results with noisy images, by giving a higher weight to the high gradients:
+
+$$
+T = \frac{\sum\limits_{p~in~D}G(p)^m~.~I(p)}{\sum\limits_{p~in~D}G(p)^m}
+$$
+
+with $m$ greater than $1$, typically $2$.
+
+
+
+\section{Implementation}
+
+The filter provided in this article use a pow of 1 by default, to fit the historical algorithm.
+Because there is many ways to compute the gradient, the user is in charge to compute the gradient
+magnitude image, and to pass it to the filter.
+A mask can also be used to limit the computation to a given zone in the image.
+
+\section{Code example}
+
+\small \begin{verbatim}
+#include "itkImageFileReader.h"
+#include "itkImageFileWriter.h"
+#include "itkSimpleFilterWatcher.h"
+
+#include "itkRobustAutomaticThresholdImageFilter.h"
+#include "itkGradientMagnitudeRecursiveGaussianImageFilter.h"
+
+int main(int argc, char * argv[])
+{
+
+  if( argc != 4 )
+    {
+    std::cerr << "usage: " << argv[0] << " inputImage outputImage pow" << std::endl;
+    exit(1);
+    }
+
+  const int dim = 2;
+  
+  typedef unsigned short PType;
+  typedef itk::Image< PType, dim > IType;
+
+  typedef float RPType;
+  typedef itk::Image< RPType, dim > RIType;
+
+  typedef itk::ImageFileReader< IType > ReaderType;
+  ReaderType::Pointer reader = ReaderType::New();
+  reader->SetFileName( argv[1] );
+  
+  typedef itk::GradientMagnitudeRecursiveGaussianImageFilter< IType, RIType > GradientType;
+  GradientType::Pointer gradient = GradientType::New();
+  gradient->SetInput( reader->GetOutput() );
+  gradient->SetSigma( 10 );
+  gradient->Update();
+
+  typedef itk::RobustAutomaticThresholdImageFilter< IType, RIType > FilterType;
+  FilterType::Pointer filter = FilterType::New();
+  filter->SetInput( reader->GetOutput() );
+  filter->SetGradientImage( gradient->GetOutput() );
+  filter->SetPow( atof(argv[3]) );
+
+  itk::SimpleFilterWatcher watcher(filter, "filter");
+
+  typedef itk::ImageFileWriter< IType > WriterType;
+  WriterType::Pointer writer = WriterType::New();
+  writer->SetInput( filter->GetOutput() );
+  writer->SetFileName( argv[2] );
+  writer->Update();
+
+  return 0;
+}
+\end{verbatim} \normalsize
 
 % \url{http://www.itk.org}
 % \code{Insight/Documentation/Style.pdf}
@@ -86,6 +173,19 @@ colorlinks,linkcolor={blue},citecolor={blue},urlcolor={blue},
 \caption{The input image.\label{cthead1}}
 \end{figure}
 
+\begin{figure}[htbp]
+\centering
+\includegraphics{test}
+\caption{The thresholded image.\label{cthead1}}
+\end{figure}
+
+
+\section{Note on access to the cited articles}
+None of the two articles cited are available easily (for free), and the content of
+this contribution is based on other sources which are using those article.
+You may found some difference in the algorithm compared to the original ones.
+
+A day will come when there will be nothing else than open access...
 
 \appendix
 
@@ -93,7 +193,7 @@ colorlinks,linkcolor={blue},citecolor={blue},urlcolor={blue},
 
 \bibliographystyle{plain}
 \bibliography{InsightJournal}
-\nocite{ITKSoftwareGuide}
+% \nocite{ITKSoftwareGuide}
 
 \end{document}
 
