fix author name
darcs-hash:20080618125818-2fc9d-09e583ad4e679c5c0f12c03e060036a6edd2b9ea.gz

--- a/article/InsightJournal.bib
+++ b/article/InsightJournal.bib
@@ -4805,8 +4805,8 @@ Discipline},
   Year           = 1986
 }
 
-@Article{Kitler1985,
-  Author         = "Kitler, J. and Illingworth, J. and Foglein, J.",
+@Article{Kittler1985,
+  Author         = "Kittler, J. and Illingworth, J. and Foglein, J.",
   Title          = "Threshold selection based on a simple image statistic.",
   Journal        = "Computer vision, graphics, and image processing",
   Volume         = "30",
