--- a/article/Article.tex
+++ b/article/Article.tex
@@ -55,7 +55,7 @@ Reproduction, Jouy en Josas, F-78350, France}
 
 \begin{abstract}
 \noindent
-Robust Automatic Threshold Selection (RATS) \cite{Kitler1985} is a fast and noise robust
+Robust Automatic Threshold Selection (RATS) \cite{Kittler1985} is a fast and noise robust
 automatic thresholding method based on gradients in the image. The basic idea is to choose
 the threshold at the intensity where the gradient are the highest.
 \end{abstract}
